test/invalid-semantics/66358_invalid_types_if_branch/invalid_if_branch.mag
-- Author: 66358, Gustavo Cardoso
fun main (_) : Unit -> Unit = if true then 5 else false